TAG: mrkcoordload-5-1-4-1
DATE: 07/27/2013
STAFF: dbm
CHANGES:
1) mrkcoordload.config.default: Use sym link for each jar file in JAVA_LIB path

TAG: mrkcoordload-5-1-3-1
DATE: 04/16/2013
STAFF: sc
RELEASE: new homologyload used mrkcoordload in error. Retagging early
for the 5.1.3 release to disambiguate

TAG: mrkcoordload-5-1-1-3
DATE: 11/12/2012
STAFF: sc
RELEASE: C4AM/B38
1) mrkcoordQC.sh - change temp table column mirbaseID to text
2) mrkcoordQC.py - change non-mirna report temp table query to
    use 'like "%MI%"' instead of 'is not null' as may only use
    like for a text field in where clause

TAG: mrkcoordload-5-1-1-2
DATE: 11/09/2012
STAFF: sc
RELEASE: C4AM/B38
CHANGES: removed some debug 

TAG: mrkcoordload-5-1-1-1
DATE: 11/07/2012
STAFF: sc
RELEASE: dev C4AM/B38
CHANGES: US 175 - n-m mirbase IDs
1) bin/mrkcoordQC.py - other mkr report, tab-delim and add 'tab-delim' to report header
2) bin/mrkcoordQC.sh - build= must start header line

TAG: mrkcoordload-5-0-0-14
DATE: 10/31/2012
STAFF: sc
RELEASE: dev C4AM/B38
CHANGES: US 175 - n-m mirbase IDs
1) mrkcoordload.sh - rm checkMirbaseIDS function (this functionality moved to 
     mrkcoordQC.py), added mirbase dup and other mkr reports to RPT_LIST
2) index.html - added
3) mrkcoordload.config.default - added mirbase dup and other mkr reports
4) createInputFiles.py - delete mirbase ID only from marker in input NOT from
	all markers in DB. Commented that column 8 may now be multi-valued
5) mrkcoordQC.py - added mirbase dup and other mkr reports, updated the delete report

TAG: mrkcoordload-5-0-0-13
DATE: 10/23/2012
STAFF: sc
RELEASE: dev
CHANGES: createInputFiles.py - update to  use INPUT_FILE_LOAD
	(from INPUT_FILE_DEFAULT which was being used prior
	to the QC scripts creating INPUT_FILE_LOAD)

TAG: mrkcoordload-5-0-0-12
DATE: 10/15/2012
STAFF: sc
RELEASE: dev
CHANGES: 
1) Daves changes for US10 mirbase QC
2) Jon changes to publish